kubernetes/service.yml
apiVersion: v1 
kind: Service 
metadata:
  name: ""
  namespace: eagle-namespace
spec:
  selector:
    app: empirehub
  ports:
  - name: http 
    protocol: TCP 
    port: 8080
    targetPort: 5000
