kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ""
  namespace: eagle-namespace
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ""
                port:
                  number: 80
